--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,14 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 90vh;
 }
 
 .container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin-top: 100px;
     width: 700px;
     height: 300px;
@@ -59,11 +60,7 @@ img {
 }
 
 #todo-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 input {
